[gd_scene load_steps=12 format=4 uid="uid://cwypbc1qlaq1c"]

[ext_resource type="Texture2D" uid="uid://b7xtv41v2owb7" path="res://assets/pixel_art/ground_tilemap.png" id="1_mb3v4"]
[ext_resource type="Script" path="res://scenes/village/collection.gd" id="1_o708g"]
[ext_resource type="Texture2D" uid="uid://dmovpodcvb31q" path="res://assets/pixel_art/interior.png" id="2_ax0jp"]
[ext_resource type="FontFile" uid="uid://bbboar44j52e8" path="res://assets/HappyHalloween.ttf" id="4_g5ied"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_228r8"]
texture = ExtResource("1_mb3v4")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -8)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -8)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -8)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -8)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, -8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, -8)
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, -8)
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, -8)
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, -8)
4:1/0 = 0
4:1/0/texture_origin = Vector2i(0, -8)
5:1/0 = 0
5:1/0/texture_origin = Vector2i(0, -8)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, -8)
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, -8)
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, -8)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, -8)
4:2/0 = 0
4:2/0/texture_origin = Vector2i(0, -8)
5:2/0 = 0
5:2/0/texture_origin = Vector2i(0, -8)
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, -8)
1:3/0 = 0
1:3/0/texture_origin = Vector2i(0, -8)
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, -8)
3:3/0 = 0
3:3/0/texture_origin = Vector2i(0, -8)
4:3/0 = 0
4:3/0/texture_origin = Vector2i(0, -8)
5:3/0 = 0
5:3/0/texture_origin = Vector2i(0, -8)
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
0:4/0/texture_origin = Vector2i(0, -8)
1:4/0 = 0
1:4/0/texture_origin = Vector2i(0, -8)
2:4/0 = 0
2:4/0/texture_origin = Vector2i(0, -8)
3:4/0 = 0
3:4/0/texture_origin = Vector2i(0, -8)
4:4/0 = 0
4:4/0/texture_origin = Vector2i(0, -8)
5:4/0 = 0
5:4/0/texture_origin = Vector2i(0, -8)
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ihw2n"]
texture = ExtResource("2_ax0jp")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -8)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -8)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -8)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -8)

[sub_resource type="TileSet" id="TileSet_vxnjf"]
tile_shape = 1
tile_layout = 5
tile_offset_axis = 1
tile_size = Vector2i(32, 16)
sources/0 = SubResource("TileSetAtlasSource_228r8")
sources/1 = SubResource("TileSetAtlasSource_ihw2n")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqful"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wkro"]
bg_color = Color(0.976471, 0.45098, 0, 1)
border_width_bottom = 5
border_color = Color(0.321569, 0.298039, 0.258824, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 3
shadow_offset = Vector2(1, 1)
anti_aliasing_size = 0.625

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywvoa"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_lww1l"]
default_font = ExtResource("4_g5ied")
default_font_size = 32
Button/styles/hover = SubResource("StyleBoxFlat_tqful")
Button/styles/normal = SubResource("StyleBoxFlat_8wkro")
Button/styles/pressed = SubResource("StyleBoxFlat_ywvoa")

[node name="collection" type="Node2D"]
script = ExtResource("1_o708g")
metadata/_edit_horizontal_guides_ = [-32.0, 350.0]
metadata/_edit_vertical_guides_ = [282.0]

[node name="figurine_list" type="ItemList" parent="."]
offset_left = 572.0
offset_top = 34.0
offset_right = 856.0
offset_bottom = 595.0
max_columns = 2
same_column_width = true
icon_scale = 3.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 886.0
offset_top = 143.0
offset_right = 1128.0
offset_bottom = 545.0
color = Color(0.976471, 0.45098, 0, 0.14902)

[node name="house" type="Node2D" parent="."]
position = Vector2(-51, -124)
scale = Vector2(1.74, 1.74)

[node name="TileMapLayer" type="TileMapLayer" parent="house"]
tile_map_data = PackedByteArray("AAATAAgAAAABAAEAAAATAAkAAAABAAEAAAAUAAkAAAABAAEAAAAUAAoAAAABAAEAAAATAAoAAAABAAEAAAATAAsAAAABAAEAAAAUAAsAAAABAAEAAAAUAAwAAAABAAEAAAATAAwAAAABAAEAAAATAA0AAAABAAEAAAAUAA0AAAABAAEAAAAVAAwAAAABAAEAAAAVAAsAAAABAAEAAAAVAAoAAAABAAEAAAAUAAgAAAABAAEAAAAVAAgAAAABAAEAAAAVAAkAAAABAAEAAAAVAA0AAAABAAEAAAAVAA4AAAABAAEAAAAWAA4AAAABAAEAAAAXAA4AAAABAAEAAAAXAA0AAAABAAEAAAAXAAwAAAABAAEAAAAYAAwAAAABAAEAAAAXAAsAAAABAAEAAAAXAAoAAAABAAEAAAAXAAkAAAABAAEAAAAWAAkAAAABAAEAAAAWAAoAAAABAAEAAAAWAAsAAAABAAEAAAAWAAwAAAABAAEAAAAWAA0AAAABAAEAAAAYAA0AAAABAAEAAAAYAAsAAAABAAEAAAAYAAoAAAABAAEAAAAYAAkAAAABAAEAAAAXAAgAAAABAAEAAAAWAAgAAAABAAEAAAAZAAwAAAABAAEAAAAZAAsAAAABAAEAAAAYAA4AAAABAAEAAAAZAA4AAAABAAEAAAAZAA0AAAABAAEAAAAUAA4AAAABAAEAAAATAA4AAAABAAEAAAAZAAoAAAABAAEAAAAZAAkAAAABAAEAAAAZAAgAAAABAAEAAAAYAAgAAAABAAEAAAA=")
tile_set = SubResource("TileSet_vxnjf")

[node name="TileMapLayer2" type="TileMapLayer" parent="house"]
tile_map_data = PackedByteArray("AAARAA0AAQAEAAAAAAARAAwAAQAEAAAAAAARAAsAAQAEAAAAAAARAAoAAQAEAAAAAAARAAkAAQAEAAAAAAARAAgAAQAEAAAAAAARAAcAAQAEAAAAAAASAAYAAQADAAAAAAATAAYAAQADAAAAAAAUAAYAAQADAAAAAAAVAAYAAQADAAAAAAAWAAYAAQADAAAAAAAXAAYAAQADAAAAAAAYAAYAAQADAAAAAAA=")
tile_set = SubResource("TileSet_vxnjf")

[node name="TileMapLayer3" type="TileMapLayer" parent="house"]
position = Vector2(0, -16)
tile_map_data = PackedByteArray("AAARAA0AAQAEAAAAAAARAAwAAQAEAAAAAAARAAsAAQAEAAAAAAARAAoAAQAEAAAAAAARAAkAAQAEAAAAAAARAAgAAQAEAAAAAAARAAcAAQAEAAAAAAASAAYAAQADAAAAAAATAAYAAQADAAAAAAAUAAYAAQADAAAAAAAVAAYAAQADAAAAAAAWAAYAAQADAAAAAAAXAAYAAQADAAAAAAAYAAYAAQADAAAAAAA=")
tile_set = SubResource("TileSet_vxnjf")

[node name="TileMapLayer4" type="TileMapLayer" parent="house"]
position = Vector2(0, -32)
tile_map_data = PackedByteArray("AAARAA0AAQAEAAAAAAARAAwAAQAEAAAAAAARAAsAAQAEAAAAAAARAAoAAQAEAAAAAAARAAkAAQAEAAAAAAARAAgAAQAEAAAAAAARAAcAAQAEAAAAAAASAAYAAQADAAAAAAATAAYAAQADAAAAAAAUAAYAAQADAAAAAAAVAAYAAQADAAAAAAAWAAYAAQADAAAAAAAXAAYAAQADAAAAAAAYAAYAAQADAAAAAAA=")
tile_set = SubResource("TileSet_vxnjf")

[node name="TileMapLayer5" type="TileMapLayer" parent="house"]
position = Vector2(0, -48)
tile_map_data = PackedByteArray("AAARAA0AAQAEAAAAAAARAAwAAQAEAAAAAAARAAsAAQAEAAAAAAARAAoAAQAEAAAAAAARAAkAAQAEAAAAAAARAAgAAQAEAAAAAAARAAcAAQAEAAAAAAASAAYAAQADAAAAAAATAAYAAQADAAAAAAAUAAYAAQADAAAAAAAVAAYAAQADAAAAAAAWAAYAAQADAAAAAAAXAAYAAQADAAAAAAAYAAYAAQADAAAAAAA=")
tile_set = SubResource("TileSet_vxnjf")

[node name="TileMapLayer6" type="TileMapLayer" parent="house"]
position = Vector2(0, -64)
tile_map_data = PackedByteArray("AAARAA0AAQAEAAAAAAARAAwAAQAEAAAAAAARAAsAAQAEAAAAAAARAAoAAQAEAAAAAAARAAkAAQAEAAAAAAARAAgAAQAEAAAAAAARAAcAAQAEAAAAAAASAAYAAQADAAAAAAATAAYAAQADAAAAAAAUAAYAAQADAAAAAAAVAAYAAQADAAAAAAAWAAYAAQADAAAAAAAXAAYAAQADAAAAAAAYAAYAAQADAAAAAAA=")
tile_set = SubResource("TileSet_vxnjf")

[node name="TileMapLayer7" type="TileMapLayer" parent="house"]
position = Vector2(0, -80)
tile_map_data = PackedByteArray("AAARAA0AAQAEAAAAAAARAAwAAQAEAAAAAAARAAsAAQAEAAAAAAARAAoAAQAEAAAAAAARAAkAAQAEAAAAAAARAAgAAQAEAAAAAAARAAcAAQAEAAAAAAASAAYAAQADAAAAAAATAAYAAQADAAAAAAAUAAYAAQADAAAAAAAVAAYAAQADAAAAAAAWAAYAAQADAAAAAAAXAAYAAQADAAAAAAAYAAYAAQADAAAAAAA=")
tile_set = SubResource("TileSet_vxnjf")

[node name="TileMapLayer8" type="TileMapLayer" parent="house"]
position = Vector2(0, -96)
tile_map_data = PackedByteArray("AAARAA0AAQAEAAAAAAARAAwAAQAEAAAAAAARAAsAAQAEAAAAAAARAAoAAQAEAAAAAAARAAkAAQAEAAAAAAARAAgAAQAEAAAAAAARAAcAAQAEAAAAAAASAAYAAQADAAAAAAATAAYAAQADAAAAAAAUAAYAAQADAAAAAAAVAAYAAQADAAAAAAAWAAYAAQADAAAAAAAXAAYAAQADAAAAAAAYAAYAAQADAAAAAAA=")
tile_set = SubResource("TileSet_vxnjf")

[node name="gambling" type="Button" parent="."]
offset_left = 116.0
offset_top = 506.0
offset_right = 449.0
offset_bottom = 590.0
theme = SubResource("Theme_lww1l")
text = "Buy random figurine"

[node name="selected" type="Sprite2D" parent="."]

[node name="exit" type="Button" parent="."]
offset_left = 12.0
offset_top = 13.0
offset_right = 106.0
offset_bottom = 61.0
theme = SubResource("Theme_lww1l")
text = "EXIT"

[node name="team" type="Button" parent="."]
offset_left = 912.0
offset_top = 38.0
offset_right = 1119.0
offset_bottom = 102.0
theme = SubResource("Theme_lww1l")
text = "Add to team
"

[node name="team_view" type="GridContainer" parent="."]
offset_left = 895.0
offset_top = 204.0
offset_right = 1100.0
offset_bottom = 555.0
scale = Vector2(2, 2)
theme_override_constants/h_separation = 10
columns = 3

[node name="1" type="TextureRect" parent="team_view"]
layout_mode = 2

[node name="2" type="TextureRect" parent="team_view"]
layout_mode = 2

[node name="3" type="TextureRect" parent="team_view"]
layout_mode = 2

[node name="4" type="TextureRect" parent="team_view"]
layout_mode = 2

[node name="5" type="TextureRect" parent="team_view"]
layout_mode = 2

[node name="6" type="TextureRect" parent="team_view"]
layout_mode = 2

[node name="7" type="TextureRect" parent="team_view"]
layout_mode = 2

[node name="8" type="TextureRect" parent="team_view"]
layout_mode = 2

[node name="9" type="TextureRect" parent="team_view"]
layout_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = 943.0
offset_top = 151.0
offset_right = 1081.0
offset_bottom = 190.0
theme_override_fonts/font = ExtResource("4_g5ied")
theme_override_font_sizes/font_size = 24
text = "current team"

[connection signal="item_selected" from="figurine_list" to="." method="_on_figurine_list_item_selected"]
[connection signal="pressed" from="gambling" to="." method="_on_gambling_pressed"]
